# ome-metadata

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
py/ome_metadata/: __init__.py
src/: error.rs  lib.rs  ome.rs  py.rs
tests/: 1xp53-01-AP1.xml  20230511-p53-4x-CMV-1min-4h-01-Airyscan Processing-01.xml  4-Pos_001_002.xml  Experiment-2029.xml  MK022_cE9_1-01-Airyscan Processing-01-Scene-2-P1.xml  YTL1841B2-2-1_1hr_DMSO_galinduction_1.xml  YTL1849A111_2023_05_04__14_46_19_cellnr_1_track.xml  YTL1849A131_2023_05_04__13_36_36.xml  YTL378_JF552.xml  beads_2023_05_04__19_00_22.xml  multi-channel.ome.xml  test.xml
