[package]
name = "ome-metadata"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.1"
authors = ["Wim Pomp <w.pomp@nki.nl>"]
license = "MIT"
description = "Ome metadata as a rust/python structure."
homepage = "https://github.com/wimpomp/ome-metadata"
repository = "https://github.com/wimpomp/ome-metadata"
readme = "README.md"
keywords = ["bioformats", "imread", "ome", "metadata"]
categories = ["multimedia::images", "science"]
exclude = ["/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ome_metadata"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
enum-utils = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
quick-xml = {  version = "0.37.5", features = ["serialize"] }

[dependencies.pyo3]
version = "0.24.2"
features = ["extension-module", "abi3-py310", "generate-import-lib", "anyhow"]
optional = true

[features]
python = ["dep:pyo3"]
