[package]
name = "ome-metadata"
version = "0.4.0"
edition = "2024"
rust-version = "1.85.1"
authors = ["Wim Pomp <w.pomp@nki.nl>"]
license = "MIT"
description = "Ome metadata as a rust/python structure."
homepage = "https://github.com/wimpomp/ome-metadata"
repository = "https://github.com/wimpomp/ome-metadata"
documentation = "https://docs.rs/ome-metadata"
readme = "README.md"
keywords = ["bioformats", "imread", "ome", "metadata"]
categories = ["multimedia::images", "science"]
exclude = ["/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ome_metadata"
crate-type = ["cdylib", "rlib"]

[dependencies]
enum-utils = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
quick-xml = { version = "0.38", features = ["serialize"] }

[dependencies.pyo3]
version = "0.27"
features = ["extension-module", "abi3-py310", "generate-import-lib", "anyhow"]
optional = true

[features]
python = ["dep:pyo3"]
