[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "ome-metadata"
keywords = ["bioformats", "imread", "ome", "metadata"]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version", "description", "authors", "license", "readme"]

[project.urls]
Repository = "https://github.com/wimpomp/ome-metadata"

[tool.maturin]
python-source = "py"
features = ["pyo3/extension-module", "python"]
module-name = "ome_metadata.ome_metadata_rs"

[tool.isort]
line_length = 119
